Created structure and implementation of onion arhitecture
