# client.core/src/main/resources/api.yaml
@@ -160,6 +160,160 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/ServerError'
+  /fleet/{carId}:
+    get:
+      tags:
+        - fleet
+      summary: get specific car from fleet
+      description: retrieves a specific car from fleet based on its id
+      operationId: getFleetCar
+      parameters:
+        - in: path
+          name: carId
+          schema:
+            type: integer
+            format: int32
+          required: true
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CarDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          description: Id not found
+        '500':
+          $ref: '#/components/responses/ServerError'
+  /rental:
+    post:
+      tags:
+        - rental
+      summary: post rental
+      description: creates a rental
+      operationId: createRental
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RentalDTO'
+      responses:
+        '201':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RentalDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/ServerError'
+    get:
+      tags:
+        - rental
+      summary: get rental
+      description: gets all the rentals, with filter options if specified
+      operationId: getRentals
+      parameters:
+        - in: query
+          name: userId
+          schema:
+            type: string
+          description: The user id used to filter
+        - in: query
+          name: carId
+          schema:
+            type: string
+            description: The car id used to filter
+        - in: query
+          name: status
+          schema:
+            type: string
+          description: The status of the rental used to filter
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RentalDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/ServerError'
+  /rental/{rentalId}:
+    get:
+      tags:
+        - rental
+      summary: get specific rental
+      description: retrieves a specific rental based on its id
+      operationId: getRental
+      parameters:
+        - in: path
+          name: rentalId
+          schema:
+            type: integer
+            format: int32
+          required: true
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RentalDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          description: Id not found
+        '500':
+          $ref: '#/components/responses/ServerError'
+    delete:
+      tags:
+        - rental
+      summary: deletes specific rental
+      description: deletes a specific rental based on its id
+      operationId: deleteRental
+      parameters:
+        - in: path
+          name: rentalId
+          schema:
+            type: string
+          required: true
+      responses:
+        '204':
+          description: Deleted
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          description: id not found
+        '500':
+          $ref: '#/components/responses/ServerError'
 
 components:
   responses:
@@ -318,3 +472,31 @@ components:
           type: integer
           format: int32
           description: the id of the created entity
+
+    RentalDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+          description: id of the rental
+        userId:
+          type: integer
+          format: int32
+          description: id of the user
+        carId:
+          type: integer
+          format: int32
+          description: id of the car
+        startDateTime:
+          type: string
+          format: date-time
+          description: the start date and time of the rental
+        endDateTime:
+          type: string
+          format: date-time
+          description: the end date and time of the rental
+        status:
+          type: string
+          enum: [ "ACTIVE", "CANCELLED" ]
+          description: the status of the rental
