# domain/src/main/java/ro/agilehub/javacourse/car/hire/rental/domain/service/impl/RentalServiceImpl.java
@@ -2,16 +2,23 @@ package ro.agilehub.javacourse.car.hire.rental.domain.service.impl;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import ro.agilehub.javacourse.car.hire.rental.domain.domain.RentalDO;
+import ro.agilehub.javacourse.car.hire.rental.domain.manager.RentalManager;
+import ro.agilehub.javacourse.car.hire.rental.domain.service.definition.RentalService;
 
 @Service
 @RequiredArgsConstructor
 public class RentalServiceImpl implements RentalService {
-    private final UserApi userApi;
+    private final RentalManager rentalManager;
 
     @Override
     public Integer createNewRental(RentalDO example) {
-        var userDTOResponseEntity = userApi.getUser(example.getUser().getId());
-        return 123;
+        return rentalManager.createNewRental(example);
+    }
+
+    @Override
+    public RentalDO getRental(Integer rentalId) {
+        return rentalManager.getRental(rentalId);
     }
 
 }
